# wabo_CodingChallenge

./: .gitignore  README.md  install.sh
api/: openapi.yaml
kinematics/: CMakeLists.txt  version.h.in
kinematics/include/wabo/: kinematics.h
kinematics/src/: CartesianPosition.h  Interface.h  Joint.cpp  Joint.h  Link.cpp  Link.h  kinematics.cpp
kinematics/tests/: CMakeLists.txt  kinematic_test.cpp
server/: README.md  pyproject.toml
server/kinematics_server/: handlers.py  kinematics_cffi.py  main.py  models.py
visualisation/: README.md  pyproject.toml  visualise.py
