[tool.poetry]
name = "kinematics_visualisation"
version = "0.1.0"
description = "Interactive visualisation for kinematics server."
authors = ["Wandelbots <info@wandelbots.com>"]

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.8.0"
requests = "^2.31.0"
numpy = "^2.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
